# semantic-cache-clustering-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: cache.py  main.py  models.py
notebooks/: exploration.ipynb
scripts/: analyze_cluster.py  ingest_and_cluster.py  test_api.py
